2006-08-18 [paul]	0.3.0cvs3

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-04 [holger]	0.3.0cvs2

	* src/notification_foldercheck.c
	* src/notification_popup.c
	* src/notification_popup.h
	* src/notification_prefs.c
	* src/notification_prefs.h
		Expand folder specific settings to the
		popup module, and fix several bugs on the way.

2006-08-03 [holger]	0.3.0cvs1

	* src/notification_foldercheck.c
		Make specific folder list safe against deleted
		folders. Fixes crasher when an already deleted
		folder was accessed.

2006-08-02 [paul]

	0.3 released

2006-07-27 [holger]	0.3

	* src/Makefile.am
	* src/notification_core.c
	* src/notification_core.h
	* src/notification_banner.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_foldercheck.c	*** new file ***
	* src/notification_foldercheck.h	*** new file ***
		Introduce restricting notification to certain
		folders via the options page.  Currently, the
		new feature is only used in the "Banner" module,
		but the others will follow soon. Hopefully.

2006-06-10 [holger]	0.2.1

	* src/notification_prefs.c
		Rework prefs page, to make greying out inactive
		options easier.

2006-06-06 [wwp]	0.2.0cvs2

	* configure.ac
	* src/.cvsignore
		fix/unify/simplify autostuff.

2006-06-03 [wwp]	0.2.0cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-05-25 [holger]	0.2

	* configure.ac
	* src/Makefile.am
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_command.c	*** new file ***
	* src/notification_command.h	*** new file ***
		Add new module: command
		Executes a command line upon new mail arrival.
		In contrast to the builtin-command support, the
		command ist just issued when the mail is marked as
		"new" after sorting. This way, one can get around
		notifications when for example just Spam arrives.
	
2006-05-07 [holger]	0.1.2
